[package]
name = "tree-sitter-po"
description = "PO grammar for tree-sitter"
version = "0.0.1"
authors = [
	"Erasin Wang <erasinoo@gmail.com>",
	"Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "po", "gettext"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/erasin/tree-sitter-po"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.9"

[build-dependencies]
cc = "1.0"
